Prompt update for Postgre

--- a/Components/Pages/Nl-to-sql.razor
+++ b/Components/Pages/Nl-to-sql.razor
@@ -426,13 +426,15 @@
         "How much was paid for claims between January and March 2025?",
         "What is the denial rate for claims submitted this year?",
         "List top 5 providers by total paid amount this year.",
-        "Show me members whose claims exceed $5,000 in 2025.",
+        "Show me top 10 members based on claims paid amount in 2025.",
         "Give me claims pending for more than 60 days.",
-        "Show all claims for member <member name> in 2025",
-        "Show top 10 denial reasons and count for Q1 2025.",
+        "Show all claims for member Enrollment Id ES0001 in 2025.",
+        "Claims with no Enrollment Id",
+        "Claims without active enrollment of the member",
+        "show me the top 10 List of claimEdit status is Pend",
+        "show me the top 10 List of claimEdit status is Deny",
+        "Show me the duplicate members with same SSN and Enrollment year but different Member ID",
         "Show me the top 10 providers with the highest number of capitation claims in the last 6 months",
-        // "Show members assigned to capitated providers but with no encounters submitted in the last 6 months."
-        //Identify discrepancies between capitation payments and submitted claims for the same members.
 
     };
     private void SetTab(int tabIndex)
