--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -32,6 +32,11 @@
                 </NavLink>
             </div>
         }
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/help" Match="NavLinkMatch.All">
+                <span class="bi bi-question-circle-fill-nav-menu" aria-hidden="true"></span> Help
+            </NavLink>
+        </div>
     </nav>
 </div>
 
