--- a/Components/Layout/NavMenu.razor.css
+++ b/Components/Layout/NavMenu.razor.css
@@ -46,6 +46,15 @@
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' fill='white' class='bi bi-list-nested' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.5 11.5A.5.5 0 0 1 5 11h10a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm-2-4A.5.5 0 0 1 1 3h10a.5.5 0 0 1 0 1H1a.5.5 0 0 1-.5-.5z'/%3E%3C/svg%3E");
 }
 
+.bi-question-circle-fill-nav-menu {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' fill='white' class='bi bi-question-circle-fill' viewBox='0 0 16 16'%3E%3Cpath d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .247-.113.247-.25 0-.264.186-.428.622-.428.527 0 .635.246.635.418 0 .2-.104.338-.495.465-.764.253-1.468.629-1.468 1.582 0 .668.526 1.07 1.312 1.07.527 0 .893-.176 1.11-.527.146-.238.196-.482.196-.738h-.823c-.138 0-.247.113-.247.25 0 .264-.186.428-.622.428-.527 0-.635-.246-.635-.418 0-.2.104-.338.495-.465.764-.253 1.468-.629 1.468-1.582 0-.668-.526-1.07-1.312-1.07-.527 0-.893.176-1.11.527-.146.238-.196.482-.196.738zm2.241 5.018c0 .356-.28.646-.625.646a.623.623 0 0 1-.625-.646c0-.356.28-.646.625-.646.345 0 .625.29.625.646z'/%3E%3C/svg%3E");
+}
+
+.bi-info-circle-fill-nav-menu {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' fill='white' class='bi bi-info-circle-fill' viewBox='0 0 16 16'%3E%3Cpath d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.93 6.588a.5.5 0 0 0-.858-.514c-.329.44-.641.927-.641 1.342 0 .376.28.646.625.646.345 0 .625-.27.625-.646 0-.415-.312-.902-.641-1.342zm-.93 4.412a.5.5 0 0 0 1 0v-2a.5.5 0 0 0-1 0v2z'/%3E%3C/svg%3E");
+}
+
+
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
