Changing Product name and History Validation

--- a/Components/Pages/Configuration.razor
+++ b/Components/Pages/Configuration.razor
@@ -1,4 +1,4 @@
-﻿@page "/users"
+﻿@page "/Config"
 @inject UserService UserService
 @inject ProductService ProductService
 @rendermode InteractiveServer
