--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -18,20 +18,21 @@
             </NavLink>
         </div>
 
+        @if (AuthService.CurrentUsername == "admin")
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Config">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Configuration
+                </NavLink>
+            </div>
+        }
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Nl-to-sql">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> NLQuery Engine
             </NavLink>
         </div>
 
-        @if (AuthService.CurrentUsername == "admin")
-        {
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="Users">
-                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Configuration
-                </NavLink>
-            </div>
-        }
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/help" Match="NavLinkMatch.All">
                 <span class="bi bi-question-circle-fill-nav-menu" aria-hidden="true"></span> Help
